@startuml modelo_datos
!theme plain
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam shadowing false
skinparam linetype ortho
hide circle
hide empty methods

title GestorCOC - Modelo de Datos (ERD)

' ─────────────────────────────────────────
' CORE (abstracto, no tabla propia)
' ─────────────────────────────────────────
abstract class TimeStampedModel {
    + created_at : DateTimeField
    + updated_at : DateTimeField
}

' ─────────────────────────────────────────
' APP: assets
' ─────────────────────────────────────────
class Unit {
    + id : PK
    + name : CharField(100)
    + code : CharField(10) UNIQUE
    + airport : CharField(100) nullable
    + province : CharField(100) nullable
    + latitude : DecimalField(9,6) nullable
    + longitude : DecimalField(9,6) nullable
    + map_enabled : BooleanField
    + parent : FK(self) nullable
}

class System {
    + id : PK
    + unit : FK(Unit) nullable
    + name : CharField(100) UNIQUE
    + system_type : ENUM(NVR | CCTV)
    + is_active : BooleanField
}

class Server {
    + id : PK
    + system : FK(System)
    + name : CharField(100)
    + ip_address : GenericIPAddressField UNIQUE
    + is_active : BooleanField
}

class Camera {
    + id : PK
    + server : FK(Server) nullable
    + name : CharField(100)
    + ip_address : GenericIPAddressField nullable
    + status : ENUM(ONLINE | OFFLINE | MAINTENANCE)
    + resolution : CharField(20)
}

class CameramanGear {
    + id : PK
    + name : CharField(100)
    + serial_number : CharField(100) nullable
    + assigned_to : FK(Person) nullable
    + assigned_to_name : CharField(100) [legado]
    + condition : ENUM(NEW | GOOD | FAIR | POOR | BROKEN)
    + is_active : BooleanField
}

' ─────────────────────────────────────────
' APP: personnel
' ─────────────────────────────────────────
class Person {
    + id : PK
    + first_name : CharField(100)
    + last_name : CharField(100)
    + badge_number : CharField(6) UNIQUE
    + role : ENUM(OPERADOR | SUPERVISOR | ADMIN)
    + rank : ENUM(JEFE | OFICIAL | INSPECTOR | ... | CIVIL)
    + unit : FK(Unit) nullable
    + guard_group : CharField(50) nullable
    + is_active : BooleanField
    --
    + assigned_systems : M2M(System)
}

class ExternalPerson {
    + id : PK
    + first_name : CharField(100)
    + last_name : CharField(100)
    + dni : CharField(10) UNIQUE
    + email : EmailField
    + function : CharField(150)
    + is_active : BooleanField
}

' ─────────────────────────────────────────
' APP: novedades
' ─────────────────────────────────────────
class Novedad {
    + id : PK
    + camera : FK(Camera) nullable
    + system : FK(System) nullable
    + server : FK(Server) nullable
    + cameraman_gear : FK(CameramanGear) nullable
    + description : TextField
    + severity : ENUM(LOW | MEDIUM | HIGH | CRITICAL)
    + incident_type : CharField(50)
    + reported_by : FK(Person) nullable
    + reporter_name : CharField(100) [legado]
    + status : ENUM(OPEN | IN_PROGRESS | CLOSED)
    + external_ticket_id : CharField(50) nullable
}

' ─────────────────────────────────────────
' APP: hechos
' ─────────────────────────────────────────
class Hecho {
    + id : PK
    + timestamp : DateTimeField
    + description : TextField
    + camera : FK(Camera) nullable
    + category : ENUM(POLICIAL | OPERATIVO | INFORMATIVO | RELEVAMIENTO)
    + reported_by : FK(Person) nullable
    + sector : CharField(100) nullable
    + elements : TextField nullable
    + intervening_groups : CharField(200) nullable
    + is_solved : BooleanField
    + coc_intervention : BooleanField
    + generated_cause : BooleanField
    + end_time : DateTimeField nullable
    + resolution_time : CharField(100) nullable
    + resolution_details : TextField nullable
    + external_ref : CharField(100) nullable
}

' ─────────────────────────────────────────
' APP: records
' ─────────────────────────────────────────
class FilmRecord {
    + id : PK
    + issue_number : CharField(50) nullable
    + order_number : IntegerField nullable
    + entry_date : DateField nullable
    + request_type : ENUM(OFICIO | NOTA | EXHORTO | OTRO) nullable
    + request_number : CharField(100) nullable
    + requester : CharField(200) nullable
    + judicial_case_number : CharField(100) nullable [INDEX]
    + case_title : TextField nullable
    + incident_date : DateField nullable
    + crime_type : CharField(200) nullable
    + intervening_department : CharField(200) nullable
    + camera : FK(Camera)
    + operator : FK(Person) [PROTECT]
    + received_by : FK(Person) nullable [PROTECT]
    + start_time : DateTimeField
    + end_time : DateTimeField
    + record_type : ENUM(VD | IM | OT)
    + description : TextField nullable
    + has_backup : BooleanField
    + backup_path : CharField(500) nullable
    + file_hash : CharField(128) nullable [INDEX]
    + hash_algorithm : ENUM(sha256 | sha512 | sha3 | sha1) nullable
    + file_size : BigIntegerField nullable
    + is_integrity_verified : BooleanField
    + verified_by_crev : FK(Person) nullable [PROTECT]
    + verification_date : DateTimeField nullable
    + is_editable : BooleanField
    + delivery_status : ENUM(PENDIENTE | ENTREGADO | DERIVADO | FINALIZADO | ANULADO)
    + observations : TextField nullable
}

class Catalog {
    + id : PK
    + name : CharField(100)
    --
    + records : M2M(FilmRecord)
}

class VideoAnalysisReport {
    + id : PK
    + film_record : OneToOneField(FilmRecord) nullable
    + numero_informe : CharField(100)
    + report_date : DateField nullable
    + form_data : JSONField
}

class AIUsageLog {
    + id : PK
    + provider : ENUM(gemini | openrouter | groq | ollama)
    + model_name : CharField(100)
    + endpoint : ENUM(improve_text | video_report)
    + tokens_in : PositiveIntegerField
    + tokens_out : PositiveIntegerField
    + tokens_total : PositiveIntegerField
    + success : BooleanField
}

' ─────────────────────────────────────────
' HERENCIA
' ─────────────────────────────────────────
TimeStampedModel <|-- Unit
TimeStampedModel <|-- System
TimeStampedModel <|-- Server
TimeStampedModel <|-- Camera
TimeStampedModel <|-- CameramanGear
TimeStampedModel <|-- Person
TimeStampedModel <|-- ExternalPerson
TimeStampedModel <|-- Novedad
TimeStampedModel <|-- Hecho
TimeStampedModel <|-- FilmRecord
TimeStampedModel <|-- Catalog
TimeStampedModel <|-- VideoAnalysisReport
TimeStampedModel <|-- AIUsageLog

' ─────────────────────────────────────────
' RELACIONES
' ─────────────────────────────────────────
Unit "0..1" <-- "0..*" Unit : parent
Unit "1" <-- "0..*" System : unit
System "1" <-- "0..*" Server : system
Server "0..1" <-- "0..*" Camera : server

Person "0..1" <-- "0..*" CameramanGear : assigned_to
Person "0..1" <-- "0..*" Novedad : reported_by
Person "0..1" <-- "0..*" Hecho : reported_by
Person "1" <-- "0..*" FilmRecord : operator
Person "0..1" <-- "0..*" FilmRecord : received_by
Person "0..1" <-- "0..*" FilmRecord : verified_by_crev
Person "0..1" <-- "0..*" Person : unit (revista en)
Person "0..*" <--> "0..*" System : assigned_systems (M2M)

Camera "0..1" <-- "0..*" Novedad : camera
System "0..1" <-- "0..*" Novedad : system
Server "0..1" <-- "0..*" Novedad : server
CameramanGear "0..1" <-- "0..*" Novedad : cameraman_gear

Camera "0..1" <-- "0..*" Hecho : camera

Camera "1" <-- "1..*" FilmRecord : camera
FilmRecord "0..1" <-- "0..1" VideoAnalysisReport : film_record
FilmRecord "0..*" <--> "0..*" Catalog : records (M2M)

@enduml
